src/objects/Core_Account_Team__c.object
<CustomObject>
    <description>Using this object as Account Team.</description>
    <fields>
        <fullName>Core_Account_Access__c</fullName>
        <label>Account Access</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Teams</relationshipLabel>
        <relationshipName>Account_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Core_Case_Access__c</fullName>
        <label>Case Access</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Access_For_User__c</fullName>
        <description>Combination of AccountId + CaseAccess + UserId</description>
        <formula>Core_Account__c + &apos;|&apos; + TEXT(Core_Case_Access__c) + &apos;|&apos; + Core_Team_Member__c</formula>
        <label>Access For User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Opportunity_Access__c</fullName>
        <label>Opportunity Access</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Team_Role__c</fullName>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Team Member (100%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Owner (100%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contributor (50%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viewer (0%)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Team</label>
    <listViews>
        <fullName>All_records</fullName>
        <columns>NAME</columns>
        <columns>Core_IPS_Access_For_User__c</columns>
        <columns>Core_Account__c</columns>
        <columns>Core_Case_Access__c</columns>
        <columns>Core_Team_Member__c</columns>
        <filterScope>Everything</filterScope>
        <label>All records</label>
    </listViews>
    <nameField>
        <displayFormat>ATM-{0000}</displayFormat>
        <label>Account Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>